<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTotalExpensesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_spent"
        android:textSize="18sp"
        android:textColor="@color/md_theme_onSurfaceVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalExpensesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="€ 0.00"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalExpensesLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSimplify"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simplify_debts"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalExpensesAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTotalExpensesLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalExpensesAmount"
        tools:listitem="@layout/item_expense" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_expense"
        android:textColor="@color/md_theme_onPrimaryContainer"
        app:iconTint="@color/md_theme_onPrimaryContainer"
        app:backgroundTint="@color/md_theme_primaryContainer"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
